--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 #shoe-img {
   background: url('images/pexels-katerina-holmes-5905483.jpg') no-repeat right;
   background-size: cover;
-  height: 310px;
+  height: 280px;
   width: 100%;
 }
 
@@ -149,5 +149,10 @@ input[type='submit'] {
   }
   p {
     font-size: 16px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .go-button {
+    margin-left: 30%;
   }
 }
