--- a/style.css
+++ b/style.css
@@ -50,6 +50,17 @@ body {
   text-decoration: none;
   font-weight: bold;
 }
+
+.go-button-1 {
+  background-color: #ec5db5;
+  width: 100px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+}
 h2,
 p {
   margin: 0;
@@ -68,7 +79,7 @@ h2 {
 }
 
 .blue {
-  color: #cd2fed;
+  color: #9063cd;
   font-weight: 400;
 }
 
@@ -84,6 +95,7 @@ p {
 }
 form {
   display: flex;
+  justify-content: space-around;
 }
 input[type='email'] {
   box-sizing: border-box;
@@ -149,10 +161,5 @@ input[type='submit'] {
   }
   p {
     font-size: 16px;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .go-button {
-    margin-left: 30%;
   }
 }
