--- a/Shining Bright Template/nicepage.css
+++ b/Shining Bright Template/nicepage.css
@@ -27004,7 +27004,7 @@ section.u-grey-5:before,
 .u-grey-5 > .u-inner-container-layout:before,
 .u-container-layout.u-container-layout.u-grey-5:before,
 .u-table-alt-grey-5 tr:nth-child(even) {
-  color: #e12b32;
+  color: black;
   background-color: #f2f2f2;
 }
 .u-button-style.u-grey-5,
