--- a/Shining Bright Template/Services.css
+++ b/Shining Bright Template/Services.css
@@ -10,7 +10,7 @@
 
 .u-section-1 .u-group-1 {
   width: 100%;
-  min-height: 636px;
+  min-height: 495px;
   background-image: none;
   margin: 33px auto 0 0;
 }
@@ -159,7 +159,9 @@
   margin-bottom: 0;
   margin-top: 20px;
 }
-
+.package-buttons {
+  display: flex;
+}
 @media (max-width: 1199px) {
   .u-section-1 .u-group-1 {
     width: 100%;
@@ -185,6 +187,9 @@
 
   .u-section-1 .u-icon-5 {
     padding: 10px;
+  }
+  .package-buttons {
+    display: flex;
   }
 }
 
@@ -264,6 +269,10 @@
   .u-section-1 .u-container-layout-5 {
     padding-left: 25px;
     padding-right: 25px;
+  }
+  .package-buttons {
+    display: flex;
+    flex-direction: column;
   }
 }
 
