--- a/Shining Bright Template/nicepage.css
+++ b/Shining Bright Template/nicepage.css
@@ -5935,6 +5935,7 @@ section.u-image:not(.u-hover-box),
   .u-valign-bottom-xs {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 }
 .u-valign-middle > *,
