--- a/Shining Bright Template/Home.css
+++ b/Shining Bright Template/Home.css
@@ -45,8 +45,12 @@
   padding-left: 0;
   padding-right: 0;
   padding-top: 30px;
+  display: flex;
+  margin-top: 40px;
+  background-image: url(images/laptop\ photo.png);
+  background-size: cover;
+  width: 100%;
 }
-
 .u-section-1 .u-text-3 {
   margin: 62px 70px 0 0;
 }
