--- a/Shining Bright Template/About.css
+++ b/Shining Bright Template/About.css
@@ -52,6 +52,12 @@
   justify-content: center;
   margin-top: 50px;
 }
+.top-picture {
+  width: 50%;
+}
+.top-picture-2 {
+  display: none;
+}
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
@@ -134,5 +140,8 @@
 
   .u-section-1 .u-image-2 {
     min-height: 467px;
+  }
+  .top-picture {
+    min-width: 375px;
   }
 }
