--- a/Shining Bright Template/Rates.css
+++ b/Shining Bright Template/Rates.css
@@ -64,6 +64,13 @@
   width: 570px;
   margin: 30px auto 60px;
 }
+.sign-in-btn {
+  display: flex;
+  justify-content: center;
+}
+.protal-hr {
+  width: 56%;
+}
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
