--- a/Shining Bright Template/Home.css
+++ b/Shining Bright Template/Home.css
@@ -88,13 +88,32 @@
   background: #3b5998;
   color: white;
 }
-
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.contact-center {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
 .socials {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-left: 30px;
+}
+.connect-margin {
+  margin: 20px;
 }
 .u-section-1 .u-text-5 {
   font-size: 0.875rem;
