--- a/Shining Bright Template/Rates.css
+++ b/Shining Bright Template/Rates.css
@@ -72,6 +72,12 @@
   width: 56%;
 }
 
+.p-text-align {
+  text-align: left;
+}
+.header-mock {
+  font-weight: bolder;
+}
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 778px;
