--- a/Shining Bright Template/Home.css
+++ b/Shining Bright Template/Home.css
@@ -305,6 +305,19 @@
     margin-left: 0;
     left: 36%;
   }
+  .bottom-contianer {
+    flex-direction: column;
+  }
+  .footer-logo {
+    width: 45%;
+    min-width: 45%;
+  }
+  .footer-block-1 {
+    align-items: center;
+  }
+  .footer-email {
+    text-align: center;
+  }
 }
 .u-section-2 .u-sheet-1 {
   min-height: 500px;
