--- a/Shining Bright Template/FAQs.css
+++ b/Shining Bright Template/FAQs.css
@@ -130,6 +130,72 @@
 .top-image {
   width: 50%;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 10%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.contact-center {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.footer-block-1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  text-align: left;
+}
+.footer-logo {
+  width: 65%;
+  margin: 10px 0px;
+}
+
+.bottom-contianer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-email {
+  background-color: #333333;
+  color: white;
+}
+.connect-margin {
+  margin: 20px;
+}
+.bottom-ques {
+  display: flex;
+  justify-content: center;
+}
+.bold-weight {
+  font-weight: bold;
+}
 @media (max-width: 991px) {
   .u-section-1 .u-text-2 {
     width: 720px;
@@ -159,5 +225,18 @@
 
   .u-section-1 .u-text-2 {
     width: 340px;
+  }
+  .bottom-contianer {
+    flex-direction: column;
+  }
+  .footer-logo {
+    width: 45%;
+    min-width: 45%;
+  }
+  .footer-block-1 {
+    align-items: center;
+  }
+  .footer-email {
+    text-align: center;
   }
 }
