--- a/Shining Bright Template/Rates.css
+++ b/Shining Bright Template/Rates.css
@@ -84,6 +84,65 @@
 .u-btn-req {
   border-radius: 10px;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 10%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.contact-center {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.footer-block-1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  text-align: left;
+}
+.footer-logo {
+  width: 65%;
+  margin: 10px 0px;
+}
+
+.bottom-contianer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-email {
+  background-color: #333333;
+  color: white;
+}
+.connect-margin {
+  margin: 20px;
+}
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 778px;
@@ -248,5 +307,18 @@
   .u-section-1 .u-text-4 {
     width: 340px;
     margin-bottom: 60px;
+  }
+  .bottom-contianer {
+    flex-direction: column;
+  }
+  .footer-logo {
+    width: 45%;
+    min-width: 45%;
+  }
+  .footer-block-1 {
+    align-items: center;
+  }
+  .footer-email {
+    text-align: center;
   }
 }
