--- a/Shining Bright Template/Services.css
+++ b/Shining Bright Template/Services.css
@@ -164,6 +164,65 @@
 .package-buttons {
   display: flex;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 10%;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.contact-center {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.footer-block-1 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  text-align: left;
+}
+.footer-logo {
+  width: 65%;
+  margin: 10px 0px;
+}
+
+.bottom-contianer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-email {
+  background-color: #333333;
+  color: white;
+}
+.connect-margin {
+  margin: 20px;
+}
 @media (max-width: 1199px) {
   .u-section-1 .u-group-1 {
     width: 97%;
@@ -340,5 +399,18 @@
   .u-section-1 .u-container-layout-5 {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  .bottom-contianer {
+    flex-direction: column;
+  }
+  .footer-logo {
+    width: 45%;
+    min-width: 45%;
+  }
+  .footer-block-1 {
+    align-items: center;
+  }
+  .footer-email {
+    text-align: center;
   }
 }
