--- a/Shining Bright Template/Home.css
+++ b/Shining Bright Template/Home.css
@@ -165,7 +165,6 @@
   width: 100%;
   height: 600px;
   margin-block: 20px;
-  border: 2px solid red;
 }
 .blog-card {
   display: flex;
@@ -174,10 +173,18 @@
   max-width: 340px;
   min-width: 330px;
   height: 485px;
-  border: 1px solid black;
   border-radius: 10px;
-  background-color: blue;
+
   flex-wrap: wrap;
+}
+.first-spot {
+  background-color: red;
+}
+.second-spot {
+  background-color: rgb(21, 255, 0);
+}
+.third-spot {
+  background-color: rgb(204, 0, 255);
 }
 .blog-image {
   width: 88%;
