--- a/style.css
+++ b/style.css
@@ -238,7 +238,9 @@ body.backEnd {
   display: revert
 }
 .topLogo {
-  margin: 10px 10px 10px 10px
+  margin: -210px 10px 210px 10px;
+  text-align : center;
+  font-size: 64px
 }
 .pageButton {
   border: 1px solid black;
