--- a/home2.css
+++ b/home2.css
@@ -68,8 +68,8 @@ h2 hr {
     min-width: 30%
 }
 
-.home2-sec5{
-    margin: 50px;
+.home2-sec5 {
+    margin: 30px 10px 0px;
 }
 .border-bottom {
     border-bottom: 5px solid black;
