--- a/nicepage.css
+++ b/nicepage.css
@@ -26785,7 +26785,7 @@ section.u-black:before,
 .u-container-layout.u-container-layout.u-black:before,
 .u-table-alt-black tr:nth-child(even) {
   color: #ffffff;
-  background-color: #000000;
+  background-color: #8e64c9;
 }
 .u-button-style.u-black,
 .u-button-style.u-black[class*='u-border-'] {
